2003-11-10  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Make the check for package-name in Description:
	case-insensitive.

2003-11-09  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: Warn when Files: entries have / at the end (messes
	  up panther mv sometimes)

2003-11-09  Max Horn  <max@quendi.de>

	* Validation.pm: Minimal validation of splitoffs. This definitely should be
	  improved ASAP, though.
	* PkgVersion.pm: Propagate epoch to splitoffs.
	* Validation.pm: Improved validation of splitoffs. Check more fields for
	  hardcoded /sw.
	* PkgVersion.pm: Factored out duplicated perl handling code into a new
	  method get_perl_version_dir_arch().
	* Validation.pm: Allow type "perl 5.8.1". Allow "License" in splitoffs.
	* Package.pm, PkgVersion.pm, SelfUpdate.pm: Invoke 'find' as /usr/bin/find;
	  fixed potential data loss issue when volume/directory names contains
	  whitespaces.

2003-11-08  Max Horn  <max@quendi.de>

	* Services.pm: Remove trailing empty lines in heredocs (Bug #670712). Also
	  made .info parsing stricter, which discovers more illegal .info files.
	* Validation.pm: When checking whether a field contains the package name
	  or version, only report a warning if they occur as full words (and not
	  just as substring of a longer name/version).

2003-11-07  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: Moved fink-prebinding environment-setting stuff
	  to the fink runtime so it doesn't sit in the users' environments.

2003-11-07  Max Horn  <max@quendi.de>

	* Engine.pm: Fix bug causing incorrect installation of 'relatives' when
	  rebuilding splitoff packages (Bug #645841).
	* Package.pm: Fink::Package %package_hash -> $packages (Patch #831573).
	* Base.pm, Config.pm: Fink::Config cleanup & documentation (Patch #832063).
	* Validation.pm: Validate emacs packages (Patch #748665).
	* Base.pm: Fink::Base docs and cleanup (Patch #832828).

2003-11-06  Ben Hines <benh57@users.sourceforge.net>
